--- a/users/templates/admin_chat.html
+++ b/users/templates/admin_chat.html
@@ -4,13 +4,14 @@
 <div class="h-[100vh] w-[18vw] shadow-md p-6 z-10 flex-non">
     <h1 class="text-xl font-bold text-gray-700 mb-6">Write a Response</h1>
     
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
       {% csrf_token %}
      
           <input required type="text" name="subject" id="subject" class="w-full p-2 text-sm rounded-md shadow-sm mb-6 bg-gray-100" placeholder="Subject">
           <textarea required name="body" id="body" class="w-full bg-gray-100 rounded-md  shadow-sm text-sm p-2 h-[20vh]" placeholder="Body"></textarea>
+          <input type="file" name="reference_image">
           <button class=" p-2 bg-teal-400 mt-4 rounded-md text-xs text-white font-bold pl-6 pr-6 hover:scale-105 duration-150" type="submit">Submit</button>
-        
+          
     </form>
   </div>
   <div class="p-4 h-[100vh] w-[46vw] overflow-y-scroll">
@@ -34,6 +35,9 @@
           <p>Date: {{ feedback.date }} </p>
           <p>Subject: {{ feedback.subject }} </p>
           <p>Body: {{ feedback.body }} </p>
+          {% if feedback.reference_image %}
+            <img src="{{ feedback.reference_image.url }}" alt="image unavailable" class="w-full h-full rounded-lg mt-5">
+          {% endif %}
         </div>
       </div>
       {% endfor %}
