--- a/users/templates/admin_edit_book.html
+++ b/users/templates/admin_edit_book.html
@@ -5,14 +5,46 @@
 
 <div class="max-h-[100vh] w-[82vw] overflow-y-auto p-8">
 
+  <form action="" method="GET">
+    <div id="search-box" class=" top-0 z-10 bg-gray-50 shadow-sm">
+ 
+      <div class="relative flex items-center w-full h-12 rounded-lg focus-within:shadow-lg bg-white overflow-hidden">
+        <div class="grid place-items-center h-full w-12 text-gray-300">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+          </svg>
+          
+        </div>
+        
+        <select id="search-by" name="search-by" required class="peer h-full w-32 text-sm text-gray-700 bg-white border-none outline-none pl-4 pr-2 rounded-l-lg">
+          <option value="title">Title</option>
+          <option value="isbn">ISBN</option>
+        </select>
+        <input
+          required
+          class="peer h-full w-full border-none outline-none text-sm text-gray-700 pr-2"
+          type="text"
+          id="search"
+          value="{{search_value}}"
+          name="search"
+          placeholder="Search Your Favourite Books.." />
+          <button type="submit" class="px-6 bg-teal-400 py-2 text-white rounded-lg">Search</button>
+      </div>
+    </div>
+  </form>
+  <div >
+    {% for message in messages %}
+    <p class="p-4 text-red-500">{{ message }}</p>
+    {% endfor %}
+  </div>
   {% for book in books %}
     <div class="relative flex items-center w-full h-60 rounded-lg shadow-md duration-150 p-3 mt-6 mb-6 bg-white">
       <div class="w-60 h-full rounded-lg">
         {% if book.book_cover_image %}
-                <img src="{{ book.book_cover_image.url }}" alt="{{ book.title }} Cover" class="w-full h-auto rounded-lg shadow-md mb-4">
-            {% else %}
-                <img src="{% static 'users/default_cover.jpg' %}" alt="Default Book Cover" class="w-full h-auto rounded-lg shadow-md mb-4">
-            {% endif %}
+              <img src="{{ book.book_cover_image.url }}" alt="{{ book.title }} Cover" class="w-full h-full rounded-lg">
+          {% else %}
+              <img src="{% static 'users/default_cover.jpg' %}" alt="John image" class="w-full h-full rounded-lg">
+          {% endif %}
       </div>
       <div class="w-full h-full p-6">
         <h1 class="font-poppins antialiased text-xl text-gray-700">{{ book.title }}</h1>
@@ -26,5 +58,34 @@
       </div>
     </div>
     {% endfor %}
+
+    <nav>
+      <ul class="inline-flex -space-x-px text-sm">
+        {% if books.has_previous %}
+        <li>
+          <a href="?search-by={{ request.GET.search_by }}&search={{ request.GET.search }}&page={{ books.previous_page_number }}" 
+             class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700">
+            Previous
+          </a>
+        </li>
+        {% endif %}
+      
+        <li>
+          <a href="#" 
+             class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700">
+            {{ books.number }}
+          </a>
+        </li>
+      
+        {% if books.has_next %}
+        <li>
+          <a href="?search-by={{ request.GET.search_by }}&search={{ request.GET.search }}&page={{ books.next_page_number }}" 
+             class="flex items-center justify-center px-3 h-8 text-blue-600 border border-gray-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700">
+            Next
+          </a>
+        </li>
+        {% endif %}
+      </ul>
+    </nav>
   </div>
 {% endblock %}
