--- a/users/templates/student_book_details.html
+++ b/users/templates/student_book_details.html
@@ -97,7 +97,7 @@
                 </button>
             {% endif %}
           </div>
-          {% if borrowed_before %}
+          {% if borrowed_before and not isReviewed %}
           <form method="POST">
             {% csrf_token %}
             <p class = "text-lg font-bold text-gray-700 mt-10 mb-4">Write a Review</p>
@@ -115,6 +115,8 @@
                 </div>
                 <button type="submit" class="py-2 my-4 bg-teal-400 px-6 text-white rounded-lg hover:scale-95 duration-75 ">Submit</button>
           </form>
+          {% elif isReviewed %}
+            <p>You already have reviewed the book</p>
           {% endif %}
           
         </div>
