--- a/users/templates/student_search_books.html
+++ b/users/templates/student_search_books.html
@@ -3,9 +3,8 @@
 {% block content %}
 
 <div class="p-6 w-full">
-  <form action="" method="post">
+  <form action="" method="GET">
     <div id="search-box" class=" top-0 z-10 bg-gray-50 shadow-sm">
-      {% csrf_token %}
       <div class="relative flex items-center w-full h-12 rounded-lg focus-within:shadow-lg bg-white overflow-hidden">
         <div class="grid place-items-center h-full w-12 text-gray-300">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -63,6 +62,37 @@
       </div>
     </div>
     {% endfor %}
+    
+
+<nav>
+  <ul class="inline-flex -space-x-px text-sm">
+    {% if books.has_previous %}
+    <li>
+      <a href="?search-by={{ request.GET.search_by }}&search={{ request.GET.search }}&page={{ books.previous_page_number }}" 
+         class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700">
+        Previous
+      </a>
+    </li>
+    {% endif %}
+  
+    <li>
+      <a href="#" 
+         class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700">
+        {{ books.number }}
+      </a>
+    </li>
+  
+    {% if books.has_next %}
+    <li>
+      <a href="?search-by={{ request.GET.search_by }}&search={{ request.GET.search }}&page={{ books.next_page_number }}" 
+         class="flex items-center justify-center px-3 h-8 text-blue-600 border border-gray-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700">
+        Next
+      </a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
+
   </div>
 </div>
 </div>
