--- a/users/templates/admin_change_details.html
+++ b/users/templates/admin_change_details.html
@@ -12,7 +12,7 @@
     {% endfor %}
 
     <hr class="mt-10">
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
         <div class="space-y-12">
           <div class="border-b border-gray-900/10 pb-12">
@@ -41,33 +41,19 @@
                     <input  type="text" name="book_author" id="book_author" value="{{book.author}}" class="block min-w-0 grow py-1.5 pl-1 border-none pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0 sm:text-sm/6" placeholder="Author">
                   </div>
                 </div>
-                <div class="sm:col-span-4">
+                <div class="sm:col-span-4 my-8">
                   <label for="username" class="block text-sm/6 font-medium text-gray-900">Total Copies</label>
                   <div class="mt-2">
-                    <div class="flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 focus-within:outline focus-within:outline-2 focus-within:-outline-offset-2 focus-within:outline-teal-600">
-                      <input   type="number" name="total_copies" id="total_copies" class="block min-w-0 grow py-1.5 pl-1 border-none pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0 sm:text-sm/6" placeholder="1" value = "{{book.total_copies}}">
+                    <div class="flex items-center rounded-md bg-whitepl-3 outline outline-1 -outline-offset-1 outline-gray-300 focus-within:outline focus-within:outline-2 focus-within:-outline-offset-2 focus-within:outline-teal-600">
+                      <input type="number" required min=1 name="total_copies" id="total_copies" class="block min-w-0 grow py-1.5 pl-1 border-none pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0 sm:text-sm/6" value="{{book.total_copies}}" placeholder="1">
                     </div>
                   </div>
               </div>
       
     
-              <div class="col-span-full">
-                <label for="cover-photo" class="block text-sm/6 font-medium text-gray-900">Cover photo</label>
-                <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
-                  <div class="text-center">
-                    <svg class="mx-auto size-12 text-gray-300" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" data-slot="icon">
-                      <path fill-rule="evenodd" d="M1.5 6a2.25 2.25 0 0 1 2.25-2.25h16.5A2.25 2.25 0 0 1 22.5 6v12a2.25 2.25 0 0 1-2.25 2.25H3.75A2.25 2.25 0 0 1 1.5 18V6ZM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0 0 21 18v-1.94l-2.69-2.689a1.5 1.5 0 0 0-2.12 0l-.88.879.97.97a.75.75 0 1 1-1.06 1.06l-5.16-5.159a1.5 1.5 0 0 0-2.12 0L3 16.061Zm10.125-7.81a1.125 1.125 0 1 1 2.25 0 1.125 1.125 0 0 1-2.25 0Z" clip-rule="evenodd" />
-                    </svg>
-                    <div class="mt-4 flex text-sm/6 text-gray-600">
-                      <label for="file-upload" class="relative cursor-pointer rounded-md bg-white font-semibold text-teal-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-teal-600 focus-within:ring-offset-2 hover:text-teal-500">
-                        <span>Upload a file</span>
-                        <input id="book_cover_image" name="book_cover_image" type="file" class="sr-only">
-                      </label>
-                      <p class="pl-1">or drag and drop</p>
-                    </div>
-                    <p class="text-xs/5 text-gray-600">PNG, JPG, GIF up to 10MB</p>
-                  </div>
-                </div>
+              <div class="">
+                <label for="book_cover_image">Upload the Image</label>
+                <input type="file" name="book_cover_image" id="book_cover_image class="bg-teal-400">
               </div>
             </div>
           </div>
